wheel stays on last item, doesn't need reset when spinning again - ms

--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.22",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": "^18.2.31",
+    "@types/react-dom": "^18.2.14",
     "node-sass": "^7.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-custom-roulette": "^1.4.1",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-wheel-of-prizes": "file:../react-wheel-of-prizes/react-wheel-of-prizes-1.0.9.tgz",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
