--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "loot-box-raid",
+  "homepage": "https://mlsof21.github.io",
+  "main": "public/index.html",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.15",
+    "@mui/joy": "^5.0.0-beta.12",
     "@mui/material": "^5.14.15",
+    "@mui/x-data-grid": "^6.16.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,7 +24,6 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
-    "react-wheel-of-prizes": "file:../react-wheel-of-prizes/react-wheel-of-prizes-1.0.9.tgz",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
@@ -27,7 +31,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:cname": "echo lootboxraid.com > ./build/CNAME",
+    "predeploy": "npm run build && npm run build:cname",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -50,6 +57,7 @@
   "devDependencies": {
     "@types/node-sass": "^4.11.6",
     "@types/react-router-dom": "^5.3.3",
+    "gh-pages": "^6.0.0",
     "prettier": "^2.5.1"
   }
 }
